--- a/src/main/resources/assets/storage_upgrade/lang/en_us.json
+++ b/src/main/resources/assets/storage_upgrade/lang/en_us.json
@@ -10,5 +10,6 @@
   "gui.storage_upgrade.storage_terminal_gui.button_down": "Down",
   "gui.storage_upgrade.storage_terminal_gui.button_up": "Up",
   "gui.storage_upgrade.storage_terminal_gui.search_bar": "",
-  "item.storage_upgrade.disk_storage": "Disk Storage"
+  "item.storage_upgrade.disk_storage": "Disk Storage",
+  "item.storage_upgrade.carbon_fibers": "Carbon Fibers"
 }
