--- a/src/main/resources/assets/storage_upgrade/lang/en_us.json
+++ b/src/main/resources/assets/storage_upgrade/lang/en_us.json
@@ -11,5 +11,9 @@
   "gui.storage_upgrade.storage_terminal_gui.button_up": "Up",
   "gui.storage_upgrade.storage_terminal_gui.search_bar": "",
   "item.storage_upgrade.disk_storage": "Disk Storage",
-  "item.storage_upgrade.carbon_fibers": "Carbon Fibers"
+  "item.storage_upgrade.carbon_fibers": "Carbon Fibers",
+  "item_group.storage_upgrade.storage_upgrade_tab": "Storage Upgrade",
+  "item.storage_upgrade.storage_component_1k": "Storage Component 1k",
+  "item.storage_upgrade.storage_component_4k": "Storage Component 4k",
+  "item.storage_upgrade.storage_component_64k": "Storage Component 6 4k"
 }
